--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
   <!-- Global Strings -->
+  <string name="app_name">SpaceSeekApplication</string>
   <string name="first_apod_date" tools:ignore="TypographyDashes">1995-06-16</string>
   <string name="year_month_format">MMM yyyy</string>
   <string name="image_load_error_message">Entropy wins(no image loaded)</string>
